# dsp-srikanth-banoth

./: .flake8.txt  pyproject.toml  reqiurements.txt
data/: processed_df.parquet
house_prices/: __init__.py  inference.py  preprocess.py  train.py
models/: cat_imputer.joblib  metadata.json  model.joblib  num_imputer.joblib  ohe.joblib  scaler.joblib
notebooks/: house-prices-modeling.ipynb  house-prices.ipynb  model-industrialization-1.ipynb  model-industrialization-final.ipynb
notebooks/models/: cat_imputer.joblib  metadata.json  model.joblib  num_imputer.joblib  ohe.joblib  scaler.joblib
second_submission/: notebook.ipnb  requirements.txt
